# dot-benchmarks

./: Cargo.toml  README.md
.github/workflows/: bench.yaml
benches/: dot_product.rs
