[package]
name = "dot_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nalgebra = { version = "0.33.2", features = ["matrixcompare", "rand"] }
faer = { version = "0.15", features = ["rand"] }
rand = "0.8"

[[bench]]
name = "dot_product"
harness = false
