[package]
name = "dot_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nalgebra = { version = "0.33.2", features = ["rand"] }
dotzilla = "0.2.0"
rand = "0.8.5"

[[bench]]
name = "dot_product"
harness = false
